commit du soir, pas de nouveau code, encore stuck sur ce problème de stockage de variable, j'espère pouvoir fix ça avant demain

--- a/assets/css/registerStyle.css
+++ b/assets/css/registerStyle.css
@@ -6,6 +6,7 @@ body{
     font-size: 16px;
     margin: 0;
     padding: 0;
+    width: 100%;
 }
 span{
     font-weight: bold;
